# reading-agent

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.docker.md  README.md  config.yaml  config.yaml.example  docker-compose.prod.yml  docker-compose.yml  maintenance.sh  manage.sh  monitor.sh  pyproject.toml  reading-agent.service  requirements.txt  setup.sh  test_import.py  test_lookup.py  test_tracker.py
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/emailer/: email_sender.py
src/readers/: api_reader.py  base_reader.py  reader_factory.py  rss_reader.py  source_catalog.py
src/summarizers/: summarizer.py
src/utils/: article_filter.py  article_tracker.py  config_loader.py  logger.py  metrics.py  openai_utils.py  relevance_scorer.py  show_tracked_articles.py
tests/: test_tracker.py
